--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.6.6",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.12",
-    "firebase": "^9.6.3"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
