--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "firebase": "^9.6.6",
+    "pinia": "^2.0.11",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
   },
