--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "firebase": "^9.6.6",
+    "lodash.chunk": "^4.2.0",
+    "lodash.shuffle": "^4.2.0",
     "pinia": "^2.0.11",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@types/lodash.chunk": "^4.2.6",
+    "@types/lodash.shuffle": "^4.2.6",
     "@vitejs/plugin-vue": "^2.0.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
