--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "lodash.chunk": "^4.2.0",
     "lodash.shuffle": "^4.2.0",
     "pinia": "^2.0.11",
+    "vite-esbuild-typescript-checker": "0.0.1-alpha.9",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
   },
