--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
     "lodash.chunk": "^4.2.0",
     "lodash.shuffle": "^4.2.0",
     "pinia": "^2.0.11",
-    "vite-esbuild-typescript-checker": "0.0.1-alpha.9",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
   },
@@ -19,12 +18,16 @@
     "@types/lodash.chunk": "^4.2.6",
     "@types/lodash.shuffle": "^4.2.6",
     "@vitejs/plugin-vue": "^2.0.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^8.3.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "vite-plugin-checker": "^0.4.6",
+    "vue-tsc": "^0.34.16"
   }
 }
