--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,5 @@
   "gitlens.hovers.currentLine.over": "line",
   "typescript.updateImportsOnFileMove.enabled": "always",
   "editor.formatOnPaste": true,
-  "cSpell.words": ["Gameroom", "MEMER"]
+  "cSpell.words": ["Gameroom", "Giphy", "MEMER"]
 }
