--- a/functions/package.json
+++ b/functions/package.json
@@ -15,13 +15,17 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "lodash.chunk": "^4.2.0",
+    "lodash.shuffle": "^4.2.0"
   },
   "devDependencies": {
+    "@types/lodash.chunk": "^4.2.7",
+    "@types/lodash.shuffle": "^4.2.7",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1",
     "firebase-functions-test": "^0.2.0",
+    "prettier": "^2.5.1",
     "typescript": "^3.8.0"
   },
   "private": true
