--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@vueuse/core": "^9.3.0",
+    "axios": "^1.1.2",
     "firebase": "^9.6.6",
     "lodash.chunk": "^4.2.0",
     "lodash.shuffle": "^4.2.0",
@@ -40,6 +41,7 @@
     "vite-svg-loader": "^3.6.0",
     "vitest": "^0.23.4",
     "vue-loader": "^16.8.3",
+    "vue-ts": "^1.0.11",
     "vue-tsc": "^0.34.16"
   }
 }
