--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@giphy/js-components": "^5.8.2",
+    "@giphy/js-fetch-api": "^4.4.0",
     "@vueuse/core": "^9.3.0",
-    "axios": "^1.1.2",
     "firebase": "^9.6.6",
     "lodash.chunk": "^4.2.0",
+    "lodash.orderby": "^4.6.0",
     "lodash.shuffle": "^4.2.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@types/lodash.chunk": "^4.2.6",
+    "@types/lodash.orderby": "^4.6.7",
     "@types/lodash.shuffle": "^4.2.6",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/test-utils": "^2.0.2",
