--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,5 +14,5 @@
     "types": ["vite/client"]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "exclude": ["node_modules", "**/*.stories.ts"]
+  "exclude": ["node_modules"]
 }
