--- a/functions/package.json
+++ b/functions/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@types/lodash.chunk": "^4.2.7",
     "@types/lodash.shuffle": "^4.2.7",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^8.3.0",
     "firebase-functions-test": "^0.2.0",
