--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@giphy/js-fetch-api": "^4.4.0",
     "@vueuse/core": "^9.3.0",
     "firebase": "^9.6.6",
+    "howler": "^2.2.3",
     "lodash.chunk": "^4.2.0",
     "lodash.orderby": "^4.6.0",
     "lodash.shuffle": "^4.2.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
+    "@types/howler": "^2.2.7",
     "@types/lodash.chunk": "^4.2.6",
     "@types/lodash.orderby": "^4.6.7",
     "@types/lodash.shuffle": "^4.2.6",
