--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -4,15 +4,9 @@
 name: Deploy to Firebase Hosting on PR
 "on": pull_request
 jobs:
-  build_and_preview:
+  build:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: cd client && npm ci && npm run build
-      - run: npm install -g --save-dev firebase-tools
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_MEMER_DEV }}"
-          projectId: memer-dev
