add scheduled function to cleanup stale games

--- a/firebase.json
+++ b/firebase.json
@@ -47,6 +47,12 @@
     "ui": {
       "host": "0.0.0.0",
       "enabled": true
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "pubsub": {
+      "port": 8085
     }
   }
 }
