--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@giphy/js-components": "^5.8.2",
-    "@giphy/js-fetch-api": "^4.4.0",
+    "@giphy/js-components": "^5.11.1",
+    "@giphy/js-fetch-api": "^4.8.0",
     "@vueuse/core": "^9.3.0",
     "firebase": "^9.6.6",
     "howler": "^2.2.3",
@@ -25,29 +25,29 @@
     "vue3-beautiful-chat": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
     "@types/howler": "^2.2.7",
     "@types/lodash.chunk": "^4.2.6",
     "@types/lodash.orderby": "^4.6.7",
     "@types/lodash.shuffle": "^4.2.6",
-    "@vitejs/plugin-vue": "^2.0.0",
-    "@vue/test-utils": "^2.0.2",
+    "@types/node": "^18.11.12",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/test-utils": "^2.2.6",
+    "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
-    "babel-loader": "^8.2.5",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-vue": "^8.3.0",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
     "happy-dom": "^7.5.12",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
-    "prettier": "^2.5.1",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vite-plugin-checker": "^0.4.6",
-    "vite-svg-loader": "^3.6.0",
-    "vitest": "^0.23.4",
-    "vue-loader": "^16.8.3",
-    "vue-ts": "^1.0.11",
-    "vue-tsc": "^0.34.16"
+    "vite": "^4.0.0",
+    "vite-plugin-checker": "^0.5.3",
+    "vite-svg-loader": "^4.0.0",
+    "vitest": "^0.25.6",
+    "vue-tsc": "^1.0.12"
   }
 }
